<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/sp_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

        <ImageView
            android:id="@+id/sp_profile_picture"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/default_header"
            android:contentDescription="@string/profile_picture" />

        <LinearLayout
            android:id="@+id/sp_layout_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="5dp">

            <View
                android:layout_width="28dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/sp_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_username"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sp_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/default_city"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/sp_mail_icon"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/ic_email_black_32dp"
                    android:tint="@color/colorAccentDark"
                    android:contentDescription="@string/send_email" />

                <ImageButton
                    android:id="@+id/sp_locate_icon"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_location_on_black_32dp"
                    android:tint="@color/colorAccentDark"
                    android:contentDescription="@string/show_location" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorAccent" />

        <RatingBar
            android:id="@+id/sp_rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="5dp"
            android:numStars="5"
            android:scaleX=".75"
            android:scaleY=".75"
            android:stepSize="0.5"
            android:isIndicator="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/sp_layout_stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sp_lent_books_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number_zero"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sp_lent_books_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/lent_books"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccentDark"
                    android:textSize="12sp" />

            </LinearLayout>

            <View
                android:layout_width="0.3dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sp_borrowed_books_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number_zero"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sp_borrowed_books_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/borrowed_books"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccentDark"
                    android:textSize="12sp" />

            </LinearLayout>

            <View
                android:layout_width="0.3dp"
                android:layout_height="match_parent"
                android:background="@color/colorAccent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sp_to_be_returned_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number_zero"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sp_to_be_returned_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/to_be_returned"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccentDark"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/sp_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/default_biography"
            android:textAlignment="center"
            android:textColor="@color/colorAccentDark"
            android:textSize="12sp" />

    </LinearLayout>

</ScrollView>
